# mod_socket_handoff

./: .gitignore  CLAUDE.md  Makefile  README.md  architecture.excalidraw  mod_socket_handoff.c
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apache/: socket_handoff.conf  socket_handoff.load
benchmarks/: Makefile  README.md  benchmark_common.sh  run_capacity_benchmark.sh  run_full_benchmark.sh  test_llm_backend.sh
benchmarks/load-generator/: go.mod  main.go
benchmarks/scripts/: analyze.py  collect-resources.sh  run-benchmark.sh
examples/: README.md  fdrecv.c  figlet_handler.sh  handler.sh  streaming-daemon  streaming-daemon.service  streaming_daemon.go  streaming_daemon.php  streaming_daemon_async.py  test.php  test_daemon.py
examples/mock-llm-api/: Cargo.toml  README.md
examples/mock-llm-api/src/: config.rs  handlers.rs  main.rs  patterns.rs  responses.rs  test_data.rs
examples/streaming-daemon-amp/: composer.json  php.ini  streaming_daemon.php
examples/streaming-daemon-go/: .gitignore  Makefile  README.md  ensure-go.sh  go.mod  go.sum  metrics-summary  streaming_daemon.go  streaming_daemon_test.go
examples/streaming-daemon-go/backends/: backend.go  langgraph.go  langgraph_test.go  metrics.go  mock.go  openai.go  openai_test.go  sse.go  transport.go  typing.go
examples/streaming-daemon-go/config/: config.go  config_test.go  example.yaml
examples/streaming-daemon-rs/: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/streaming-daemon-rs/config/: daemon.toml
examples/streaming-daemon-rs/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  shutdown.rs
examples/streaming-daemon-rs/src/backend/: client.rs  mock.rs  mod.rs  openai.rs  traits.rs
examples/streaming-daemon-rs/src/server/: connection.rs  handoff.rs  listener.rs  mod.rs
examples/streaming-daemon-rs/src/streaming/: mod.rs  sse.rs  writer.rs
examples/streaming-daemon-rs/systemd/: streaming-daemon-rs.service
examples/streaming-daemon-rs/tests/: error_response_test.rs  full_handoff_test.rs  handoff_test.rs
examples/streaming-daemon-rs/tests/integration/: handoff_test.rs  mod.rs
examples/streaming-daemon-swoole/: README.md  streaming_daemon.php
examples/streaming-daemon-swow/: README.md  streaming_daemon.php
examples/streaming-daemon-uring/: .gitignore  Makefile  README.md  backend.h  backend_mock.c  backend_openai.c  config.c  config.h  connection.c  connection.h  curl_manager.c  curl_manager.h  daemon.c  daemon.h  handoff.c  handoff.h  jsmn.h  json.c  json.h  metrics.c  metrics.h  pool.c  pool.h  ring.c  ring.h  server.c  server.h  streaming-daemon.toml.example  streaming.c  streaming.h  write_buffer.c  write_buffer.h
tests/: Makefile  README.md  go.mod
tests/integration/: common.sh  go_test.sh  php_test.sh  python_http2_test.sh  rust_test.sh  swoole_test.sh  swow_test.sh  uring_test.sh
tests/patterns/: abort.json  long-chunks.json  short-chunks.json  unicode.json
tests/runner/: main.go  reporter.go  scenarios.go
tests/testclient/: assertions.go  client.go  response.go
