[package]
name = "mock-llm-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "High-performance mock OpenAI-compatible streaming API server for benchmarking"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
