[package]
name = "streaming-daemon-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["mod_socket_handoff contributors"]
description = "Production-ready Rust daemon for Apache socket handoffs with LLM streaming"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "tracing", "parking_lot"] }

# Low-level Unix operations for SCM_RIGHTS
nix = { version = "0.29", features = ["socket", "fs", "process", "net", "uio"] }

# HTTP client for LLM backends
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
reqwest-eventsource = "0.6"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error handling & utilities
thiserror = "2.0"
anyhow = "1.0"
bytes = "1.9"
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[features]
default = []
# io_uring support (Linux 5.1+ only) - experimental
# uring = ["tokio-uring"]

[[bin]]
name = "streaming-daemon-rs"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true
